# shmem-dev

./: CMakeLists.txt  OWNERS  temp.md
docs/: device_api.rst
examples/: CMakeLists.txt
examples/allgather/: main.cpp  run.sh
examples/allgather/scripts/: data_statistic.py
examples/hellow_word/: CMakeLists.txt  main.cpp  run.sh
examples/rdma_demo/: README.md  main.cpp
examples/rdma_perftest/: README.md  main.cpp  rdma_perftest_kernel.cpp
include/device/: shmem_device_rma.h
include/device/low_level/: shmem_device_low_level_rma.h  shmem_device_low_level_roce.h  shmemx_device_low_level_rma.h
include/host/: shmem_host_def.h  shmem_host_init.h
include/internal/device/: shmemi_device_common.h
include/internal/device/sync/: shmemi_device_barrier.h
include/internal/host_device/: shmemi_types.h
scripts/: set_env.sh
src/: CMakeLists.txt
src/host/: shmemi_host_common.h  utils.h
src/host/bootstrap/: shmemi_bootstrap.cpp  shmemi_bootstrap.h
src/host/common/: shmemi_host_types.h  shmemi_logger.h
src/host/init/: shmem_init.cpp  shmemi_init.h
src/host/init/init_backends/: shmemi_init_base.h
src/host/init/init_backends/default/: shmemi_init_default.cpp  shmemi_init_default.h
src/host/init/init_backends/mf/: shmemi_init_mf.cpp  shmemi_init_mf.h
src/host/mem/: shmem_mm.cpp  shmem_rma.cpp  shmemi_global_state.cpp  shmemi_global_state.h  shmemi_heap.cpp  shmemi_heap.h  shmemi_mm.h
src/host/sync/: shmemi_sync.cpp  shmemi_sync.h
src/host/team/: shmem_team.cpp  shmemi_team.h
src/host/transport/: shmemi_transport.cpp  shmemi_transport.h
src/modules/bootstrap/: shmemi_bootstrap_mpi.cpp  shmemi_bootstrap_uid.cpp
src/modules/transport/: shmemi_mte.cpp  shmemi_rdma.cpp
src/modules/transport/rdma/: device_qp_manager.cpp  device_qp_manager.h  dl_hccp_def.h
src/python/: .gitignore
tests/unittest/host/mem/: shmem_host_heap_test.cpp
